@@ -608,6 +608,7 @@ wxMSW:
 - Fix drawing on wxDC when using right-to-left layout (Artur Wieczorek).
 - Fix wxGrid appearance and behaviour in RTL (Artur Wieczorek).
 - Add paragraph spacing attributes support to wxTextCtrl (dannchr).
+- Show new style directory selector even for non existent paths (raychow).
 
 
 3.0.1: (released 2014-06-15)
